--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ nav a {
 
 nav a:hover {
     text-decoration: underline;
-    transition: all 0.5s ease;
+    transition: all 0.7s linear;
 }
 
 .heroSection img {
@@ -89,7 +89,7 @@ aside a::before {
     content: "◎";
     margin-right: 20%;
     font-size: 2em;
-    position: absolut;
+    /* position: absolut; */
     /* display: inline;
     justify-content: center;
     align-items: center; */
@@ -102,6 +102,7 @@ aside a:hover {
 
 aside ul li {
     list-style: none;
+    margin-bottom: -2.5vh;
 }
 
 .strich {
@@ -110,7 +111,6 @@ aside ul li {
     font-size: 4em;
     margin-left: 8%;
     margin-bottom: 0vh;
-    position: relative;
 }
 
 /*=========================== MAIN ===========================*/
@@ -165,16 +165,7 @@ h2 {
     background: url("../img/section-voyager.jpg") 100%;
     height: 100vh;
     width: 100%;
-    margin-top: -10vh;
-    margin-left: -20%;
 }
-
-/* .lounger div:nth-of-type(1) img {
-    width: 100%;
-    position: absolute;
-    margin-left: -20%;
-    margin-top: -10%;
-} */
 
 .lounger div:nth-of-type(2) {
     background: #272727;
@@ -207,8 +198,6 @@ h2 {
     background: url("../img/section-experience-1.jpg") 100% no-repeat;
     height: 100vh;
     width: 100%;
-    margin-top: -10vh;
-    /* margin-left: -20%; */
 }
 
 .experience div:nth-of-type(2) {
@@ -340,8 +329,6 @@ h6 {
     background: url("../img/section-composition4.jpg") 100% no-repeat;
     height: 100vh;
     width: 100%;
-    margin-top: -10vh;
-    /* margin-left: -20%; */
 }
 
 .shop div:nth-of-type(2) {
