--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,8 +69,8 @@ nav a:hover {
 }
 
 .heroSection img {
-    width: 80%;
-    margin: 50vh 10% 0 10%;
+    width: 90%;
+    margin: 50vh 5% 0 5%;
 }
 
 /*========= ASIDE =========*/
@@ -100,11 +100,14 @@ aside a:hover {
     transition: all 0.3s ease;
 }
 
-aside a:focus {
-    color: #ebccc2;
-    font-size: 1.1em;
-    text-decoration: none;
-    font-size: 1.1em;
+aside a:active,
+aside a:focus,
+aside a:target,
+{
+color: #ebccc2;
+font-size: 1.1em;
+text-decoration: none;
+font-size: 1.1em;
 }
 
 aside ul li {
